bug fix: tüm engelleri kaldırma özelliği ekşi güncellemesi nedeniyle bozulmuştu, düzeltildi.
butona tıklandığında popup.html'in otomatik kapanması sağlandı.
güncellendi sayfası eklendi.
API limitleri(01.03.23):
  BAN     user, title: 6/dk   mute: ?(stabil değil)
  UNDOBAN user, title: 10/dk  mute: ?(stabil değil)

v2.2
gönderim: - yayın: 
yeni özellik: ban/mute ayarı eklendi.
yeni özellik: çaylakları da engelleme ayarı eklendi. (sadece FAV için. LIST ve UNDOBANALL için zaten çaylaklar ayırt edilmiyor.)
bug fix: yükleme ve güncellemeden sonra local storage temizlendi.

YÜKSEK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
undobanall için user, title ve mute listeleri mergeleniyor(olmamalı) ve ban/mute ayarına göre işlem yapılıyor(bug). 
bir yazarın takipçilerini engelleme özelliği
notification kısmında tahmini bitiş süresi
performans analizi yapılmalı
  logger'ın etkisi gözlemlenmeli
    array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?
    log.getData yeni arraylere kopyalanıyor mu, ref değeri mi dönüyor?
    obje içinde array silindiğinde reflerin durumu ne oluyor?

DÜŞÜK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
başlığa yazan herkesi engelle
footer content overlaps olmasın ama yine de hep en aşağıda kalsın.
takip edilen yazarlar engellenemesin ayarı
FAV BAN butonuna basıldığında eğer notification sayfası açıkça otomatik focus olarak kullanıcıya butonun işe yaradığı bilgisi verilerilebilir.
sayfa kapatıldığında iki kere earlyStop sinyali üretiliyor. Buga neden olmuyor. Muhtemelen notification sayfasına bilgi gönderme 
işlemi asenkron olmadığı için buna neden oluyor.
[gerekliliği tartışılır] test yazılımı (geliştiriliyor...)
[çok zor] firefox desteği (hiçbir şey düzgün çalışmıyor, manifest v3 desteği bile tam gelmemiş)
[zor] engel limitine ulaşıldığında durması sağlanmalı ve belki uyarı verebilir.
[belki] istatiki sonuçlar görüntülenebilmeli
[belki] istatistiki verilere göre engel yapılabilmeli